Properly fix donation section with media queries
The bank account details overflowed when the browser width was too low.
This is now fixed by wrapping the two columns.

Finally fixes #29

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -760,6 +760,22 @@ html.sticky .logo a {
     border-spacing: 15px;
 }
 
+@media all and (max-width: 800px) {
+    .donate_left {
+        float: none;
+        width: 100%;
+        padding-right: 0;
+        border-right: 0;
+        padding-bottom: 1em;
+    }
+
+    .donate_right {
+        width: 100%;
+        float: none;
+        padding-left: 0;
+    }
+}
+
 /*  contact section
     ========================================================================== */
 
